# shadowcast-player

./: .gitignore  Cargo.toml  README.md  shadowcast.example.toml
.github/workflows/: ci.yml  release.yml
.superpowers/brainstorm/725472-1775696316/content/: toolbar-layout.html
.superpowers/brainstorm/725472-1775696316/state/: server-stopped
assets/: README.md
docs/superpowers/plans/: 2026-04-09-genki-arcade.md
docs/superpowers/specs/: 2026-04-09-genki-arcade-design.md
plugins/example-logger/: Cargo.toml
plugins/example-logger/src/: lib.rs
plugins/pico-keeb/: Cargo.toml
plugins/pico-keeb/src/: lib.rs  link.rs  mapping.rs
shadowcast-core/: Cargo.toml
shadowcast-core/src/: lib.rs
src/: app.rs  config.rs  input.rs  lib.rs  main.rs  stats.rs
src/capture/: audio.rs  device.rs  format.rs  mod.rs  video.rs
src/capture/video/: avfoundation.rs  mediafoundation.rs  mod.rs  v4l2.rs
src/plugin/: host.rs
src/record/: encoder.rs  mod.rs  screenshot.rs
src/render/: display.rs  mod.rs  overlay.rs  shader.wgsl
tests/: audio_test.rs  encoder_test.rs  format_test.rs  screenshot_test.rs
