[package]
name = "shadowcast-player"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"
wgpu = "24"
winit = "0.30"
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"
zune-jpeg = "0.5"
ffmpeg-next = "7"
image = "0.25"
directories = "6"
chrono = "0.4"
crossbeam-channel = "0.5"
ringbuf = "0.4"
anyhow = "1"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
env_logger = "0.11"
log = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
v4l = "0.14"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-av-foundation = "0.3"
objc2-core-media = "0.3"
objc2-core-video = "0.3"
dispatch2 = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
] }
